# hector_stability_metrics

./: .gitignore  LICENSE  README.md
docs/: .gitignore  Doxyfile  conf.py  index.rst
hector_stability_metrics/: CMakeLists.txt  package.xml
hector_stability_metrics/include/hector_stability_metrics/: support_polygon.h  types.h
hector_stability_metrics/include/hector_stability_metrics/classes/: force_angle_stability_margin.h  normalized_energy_stability_margin.h  stability_metric_base.h  static_stability_margin.h
hector_stability_metrics/include/hector_stability_metrics/math/: hull.h  minimum.h  minimum_functions.h  normalization.h  sign_functions.h  support_polygon.h  types.h
hector_stability_metrics/include/hector_stability_metrics/message_conversions/: eigen.h  support_polygon.h
hector_stability_metrics/include/hector_stability_metrics/metrics/: common.h  common_data.h  energy_stability_margin.h  force_angle_stability_measure.h  normalized_energy_stability_margin.h  stability_metric_base.h  static_stability_margin.h
hector_stability_metrics/test/: all_tests.test  eigen_tests.h  test_convex_hull.cpp  test_stability_measures.cpp  test_stability_measures.test
